--- a/css/main.css
+++ b/css/main.css
@@ -1216,6 +1216,24 @@ button {
   border: 1px solid #ececec;
 }
 
+@media screen and (max-width: 480px) {
+  .mobile-menu__item:not(:last-child) {
+    padding-bottom: 15px;
+  }
+  .mobile-menu__link {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+  .mobile-contact__tel {
+    font-size: 30px;
+    line-height: 1.33;
+    letter-spacing: 0.02em;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     font-size: 24px;
