--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,32 @@
   border: 1px solid #ececec;
 }
 
+@media screen and (max-width: 480px) {
+  .mobile-menu {
+    &__item {
+      &:not(:last-child) {
+        padding-bottom: 15px;
+      }
+    }
+
+    &__link {
+      font-family: $main-font;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+    }
+  }
+
+  .mobile-contact {
+    &__tel {
+      font-size: 30px;
+      line-height: 1.33;
+      letter-spacing: 0.02em;
+    }
+  }
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     font-size: 24px;
